--- a/Week4MvcDemo/Views/Orders/Create.cshtml
+++ b/Week4MvcDemo/Views/Orders/Create.cshtml
@@ -18,8 +18,8 @@
                 <span asp-validation-for="OrderDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CustomerId" class="control-label"></label>
-                <input asp-for="CustomerId" class="form-control" />
+                <label class="control-label">Customer</label>
+                <select asp-for="CustomerId" class="form-control" asp-items="@ViewBag.Customers"></select>
                 <span asp-validation-for="CustomerId" class="text-danger"></span>
             </div>
             <div class="form-group">
