--- a/Week4MvcDemo/Views/Orders/Index.cshtml
+++ b/Week4MvcDemo/Views/Orders/Index.cshtml
@@ -16,19 +16,22 @@
                 @Html.DisplayNameFor(model => model.OrderDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CustomerId)
+                Customer Name
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
+
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.OrderDate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CustomerId)
+                @* @Html.DisplayFor(modelItem => item.CustomerId) *@
+                @* @item.Customer.FirstName<nbsp/>@item.Customer.LastName *@
+                @($"{item.Customer!.FirstName} {item.Customer.LastName}")
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.OrderId">Edit</a> |
